# site-gen

./: .gitignore  .gitmodules  CssProcess.hs  Site.hs  about.md  cssProcess.hs  cssTokenizer.hs  publish.sh  resume.md  russellSite.cabal  site.cabal  site.hs  stack.yaml  todo.org  util.hs
posts/: 1985-10-26-Test-Post.md  2009-11-05-a-first-post.markdown  2009-11-10-another-post.markdown  2009-11-28-a-third-post.markdown  2009-12-04-this-blog-aint-dead.markdown  2009-12-23-almost-christmas.markdown  2012-01-06-Hacking-Vertical-Vinyl.markdown  2012-02-28-Lorem-Ipsum-One.markdown  2012-02-29-Lorem-Ipsum-Two.markdown  2012-03-15-3SAT.markdown  2012-07-20-pareidoloop-edits.markdown  2012-1-06-Hacking-Vertical-Vinyl.md  2012-10-04-This-Website.markdown  2013-01-27-hexbuffer.markdown  2013-02-07-erthenvar.markdown  2013-02-24-audiounitjs.markdown  2013-03-08-soundfxweb.markdown  2013-03-29-timelinejs.markdown  2013-05-14-headphone.markdown  2013-06-14-CEM3372.markdown  2013-08-03-rtti.markdown  2013-12-01-DCO.markdown  2013-12-26-halloween.markdown  2014-01-11-EurorackMixer.markdown  2014-01-11-MusicHackDay2013.markdown  2014-01-18-do-notation-javascript.markdown  2014-02-01-knobjs.markdown  2015-01-25-bass-preamp.markdown  2019-06-14-Alpha-DCO.org  2019-06-30-Brinicle.org  2023-04-03-aido-el.org
posts-wip/: 2012-06-07-DCO-Design-Notes.markdown
resume/: resume  resume-post.tex  resume-pre.tex  resume.sh  texify.coffee
stylesheets/: frameless.scss  syntax.css  syntax.scss
templates/: afterpost.html  default.html  index.html  post-gen.html  post.html  postitem.html  (+5 more)
(+16 files in other folders)
